<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"

    >
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_history"
            android:title="@string/history"
            android:icon="@drawable/icon_history"
            />
        <item
            android:id="@+id/nav_choose_lan"
            android:title="@string/language"
            android:icon="@drawable/icon_language"
            />
        <item
            android:id="@+id/nav_alarm"
            android:title="@string/schedule_break"
            android:icon="@drawable/icon_alarm"
            />
        <item
            android:id="@+id/nav_calculate"
            android:title="@string/recommended_glasses"
            android:icon="@drawable/icon_calculate"
            />
        <item
            android:id="@+id/nav_share"
            android:title="@string/share"
            android:icon="@drawable/icon_share"
            />
        <item
            android:id="@+id/nav_rate"
            android:title="@string/rate_us"
            android:icon="@drawable/icon_rate"
            />

        <item
            android:id="@+id/nav_exit"
            android:title="@string/exit"
            android:icon="@drawable/icon_exit"
            />

    </group>

</menu>