<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row_item_db"
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:background="@color/dark_night"
    >


        <TextView
            android:id="@+id/left_eye_result"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/left_eye"
            android:textColor="@color/white"
            android:textSize="14sp"

            />

        <TextView
            android:id="@+id/right_eye_result"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/left_eye_result"
            android:gravity="center"
            android:text="@string/right_eye"
            android:textColor="@color/white"
            android:textSize="14sp"

            />

        <TextView
            android:id="@+id/date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/right_eye_result"
            android:gravity="center"
            android:text="@string/date_result"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_toStartOf="@id/delete"

            />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:minHeight="28dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/icon_trash"
            android:paddingHorizontal="4dp"


            />

    </RelativeLayout>


