<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_night"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".db.ViewResult"

    >
    
    <RelativeLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:id="@+id/left_eye_result"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/left_eye"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/right_eye_result"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/left_eye_result"
            android:gravity="center"
            android:text="@string/right_eye"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"


            />

        <TextView
            android:id="@+id/date_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/delete"
            android:layout_toEndOf="@id/right_eye_result"
            android:gravity="center"
            android:text="@string/date_result"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:text="@string/delete"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/about"
        android:paddingHorizontal="4dp"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/fast_thumb_scroll"
        app:fastScrollHorizontalTrackDrawable="@drawable/fast_line_scroll"
        app:fastScrollVerticalThumbDrawable="@drawable/fast_thumb_scroll"
        app:fastScrollVerticalTrackDrawable="@drawable/fast_line_scroll"
        tools:listitem="@layout/row_item_db" />


</RelativeLayout>